# neurostream

./: .gitignore  README.md  docker-compose.yml
ms2/: .env.example  Dockerfile  README.md  pyproject.toml
ms2/app/: main.py
ms2/app/api/: routes.py
ms2/app/core/: config.py  redis_client.py
ms2/app/models/: schemas.py
ms2/app/services/: embeddings.py  pipeline.py  transcription.py  vision.py
ms2/app/workers/: celery_worker.py
ms3/: .env.example  Dockerfile  README.md  pyproject.toml
ms3/app/: main.py
ms3/app/api/: routes.py
ms3/app/core/: config.py  db.py
ms3/app/models/: schemas.py
ms3/app/services/: indexing.py  metadata.py  search.py
ms4/: README.md  WORKFLOW.md
ms4/backend/app/: constants.py  main.py  models.py  seed.py  utils.py
ms4/backend/app/routers/: __init__.py  auth.py  internal.py  upload.py  videos.py
ms4/backend/prisma/: schema.prisma
ms4/frontend/src/app/dashboard/: page.tsx
ms4/frontend/src/types/: domain.ts
